# befunge-exec

./: .gitattributes  .gitignore  Cargo.toml  LICENSE.txt  README.md  test_tui.sh  tui_flamegraph.sh
docs/: analysis.md  asciinema.md  design.md  feature_ideas.md  language_extension_ideas.md  smart_resize.md  timeline.md  todo.md  tui_designs.md
docs/designs/: index_of_glyphs.md  original_concept.txt  resizing.md  sidebar_corner.txt  stack_collapsing.md  tab_command.txt  tab_console.txt  tab_timeline.txt  timeline.md
programs/: dna.b98  exponent.b93  fact2.b98  factorial.b98  fizzbuzz.b93  helloworld.b98  lessmore.b98  prompttest.b93  stacker.b93
src/: analyze.rs  core.rs  debug.rs  debug_command.rs  debugger.rs  execution.rs  interpreter.rs  io.rs  main.rs  program.rs  record.rs  space.rs  terminal.rs  test.rs  timeline.rs  tui.rs
src/befunge93/: mod.rs  test.rs
src/funge/: mod.rs
src/tests/: mod.rs
src/tui/: commands.rs  console.rs  draw.rs  layout.rs  styles.rs  tabs.rs  text.rs  timeline.rs  window.rs
web/: basic-website.css  befunge.css  befunge.js  bft-drag-and-drop.js  bft-web-base.css  bft-web.js  embedded-test.html  full-screen-test.html  full-screen.css  layout.css  notes.md  reset.css  test.html  text.css
