[package]
name = "bft"
description = "A collection of command line tools for executing, analyzing, and visualizing Befunge code."
keywords = ["befunge", "esoteric", "interpreter", "cli", "terminal"]
categories = ["command-line-interface", "command-line-utilities", "development-tools"]
homepage = "https://github.com/esoterra/befunge-tools"
repository = "https://github.com/esoterra/befunge-tools"
readme = "README.md"
version = "0.1.0"
authors = ["Robin Brown"]
license = "MIT"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.34", features = ["derive"] }
crossterm = "0.29.0"
ftail = "0.3.0"
grid = "0.16.1"
log = "0.4.27"
rand = "0.9.0"
thiserror = "2.0.12"
